<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:background="@drawable/bgm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">


    <LinearLayout
        android:gravity="center"
        android:id="@+id/dashboard"
        android:background="@drawable/rounded_button_background"
        android:orientation="vertical"
        android:padding="20sp"
        android:layout_width="wrap_content"
        android:layout_height="300sp">

        <TextView
            android:id="@+id/high_score_text_view"
            android:text="@string/high_score_0"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:padding="10sp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/final_score_text_view"
            android:text="@string/final_score_0"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            android:padding="10sp"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </TextView>

        <Button
            android:id="@+id/play_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#E00BF8"
            android:text="@string/play_again"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck" />

    </LinearLayout>

</LinearLayout>
